animation fixes, scrollbar

--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -12,13 +12,3 @@
 .center {
   text-align: center;
 }
-
-/* .skills {
-  width: 25vw;
-}
-
-@media (max-width: 992px) {
-  .skills {
-    width: 90vw;
-  }
-} */
